# cmake-remote-desktop

./: .gitignore  CMakeLists.txt  README.md
include/network/socket/: SocketAddressIPv4.h
include/util/: ListenerContainer.h
include/vncontrol-app/: ControlApplication.h  ControlProxy.h
include/vnserver/: resource.h
include/vnserver-app/: WinEventLogWriter.h
lib/: config-lib.lib  fb-update-sender.lib  io-lib.lib  region.lib  rfb.lib  server-config-lib.lib  win-event-log.lib  win-system.lib  zlib.lib
locallib/config-lib/: CMakeLists.txt
locallib/desktop/: CMakeLists.txt
locallib/desktop-ipc/: CMakeLists.txt
locallib/fb-update-sender/: CMakeLists.txt
locallib/file-lib/: CMakeLists.txt
locallib/ft-common/: CMakeLists.txt
locallib/ft-server-lib/: CMakeLists.txt
locallib/gui/: CMakeLists.txt
locallib/gui/src/: BaseDialog.cpp
locallib/http-server-lib/: CMakeLists.txt
locallib/io-lib/: CMakeLists.txt
locallib/libjpeg/: CMakeLists.txt
locallib/log-server/: CMakeLists.txt
locallib/log-server/src/: ConnectionListener.h
locallib/log-writer/: CMakeLists.txt
locallib/network/: CMakeLists.txt
locallib/region/: CMakeLists.txt
locallib/rfb/: CMakeLists.txt
locallib/rfb-sconn/: CMakeLists.txt
locallib/screen-hooks/: CMakeLists.txt
locallib/server-config-lib/: CMakeLists.txt
locallib/tcp-dispatcher/: CMakeLists.txt
locallib/thread/: CMakeLists.txt
locallib/tvncontrol-app/: CMakeLists.txt
locallib/tvnserver-app/: CMakeLists.txt
locallib/tvnserver-app/src/: NamingDefs.cpp
locallib/util/: CMakeLists.txt
locallib/win-event-log/: CMakeLists.txt
locallib/win-system/: CMakeLists.txt
locallib/wsconfig-lib/: CMakeLists.txt
locallib/wsconfig-lib/src/: ChangePasswordDialog.cpp  ConfigDialog.cpp  EditIpAccessRuleDialog.cpp  EditPortMappingDialog.cpp  PasswordControl.cpp  ServerConfigDialog.cpp  VideoRegionsConfigDialog.cpp
locallib/zlib/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/main/: BuildTime.cpp  CMakeLists.txt  DatagrandVNC.rc  VNCRemote.rc  main.cpp  resource.h
src/wsconfig-lib/: CMakeLists.txt
src/wsconfig-lib/src/: AdministrationConfigDialog.cpp  CommonInputValidation.cpp  IpAccessControlDialog.cpp  PortMappingDialog.cpp  TvnLogFilename.cpp
thirdlib/include/rfb-sconn/: RfbClient.h
thirdlib/include/util/: CommandLine.h
thirdlib/include/vnserver-app/: RfbClientManager.h  TvnServer.h
thirdlib/include/win-system/: SecurityAttributes.h
thirdlib/include/wsconfig-lib/: ConfigDialog.h
thirdlib/lib/: desktop-ipc.lib  file-lib.lib  ft-common.lib  ft-server-lib.lib  libjpeg.lib  log-server.lib  log-writer.lib  network.lib  rfb-sconn.lib  tcp-dispatcher.lib  thread.lib  tvnserver-app_old.lib  util.lib
thirdlib/lib/Debug/: config-lib.lib  desktop-ipc.lib  fb-update-sender.lib  file-lib.lib  ft-common.lib  ft-server-lib.lib  gui.lib  http-server-lib.lib  io-lib.lib  libjpeg.lib  log-server.lib  log-writer.lib  region.lib  rfb-sconn.lib  rfb.lib  screen-hooks.lib  server-config-lib.lib  tcp-dispatcher.lib  thread.lib  tvncontrol-app.lib  zlib.lib
thirdlib/lib/Release/: config-lib.lib  desktop-ipc.lib  desktop.lib  fb-update-sender.lib  file-lib.lib  ft-common.lib  ft-server-lib.lib  gui.lib  http-server-lib.lib  io-lib.lib  libjpeg.lib  log-server.lib  log-writer.lib  network.lib  region.lib  rfb-sconn.lib  rfb.lib  screen-hooks.lib  server-config-lib.lib  tcp-dispatcher.lib  thread.lib  tvncontrol-app.lib  win-event-log.lib  wsconfig-lib.lib  zlib.lib
